--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,24 @@
+/*----------------
+    RESET
+------------------*/
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+/*----------------
+    COMMONS
+------------------*/
+
+.container {
+  max-width: 87.5rem;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: beige;
+}
+
+h1 {
+  text-align: center;
+}
